--- a/client/css/buttons.css
+++ b/client/css/buttons.css
@@ -1,23 +1,34 @@
-body {
-  background-color: #44444C;
-  color: #fff;
-  font-family: sans-serif;
-  text-align: center;
-}
-
 input[type="radio"] {
   display: none;
 }
-
+.keys {
+  padding-top: 10vh;
+  justify-content: center;
+  display: flex;
+}
+.keyss {
+  display: flex;
+}
 .buttons {
-  padding-top: 50vh;
+  padding-top: 1vh;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  min-width: 140px;
+  min-width: 700px;
+  background-color: #333030;
+  height: 300px;
+  width: 700px;
+  border-radius: 30px;
 }
-
+.buttons > span {
+  text-shadow: #b4b3b3;
+  padding-top: 1vh;
+  color: #b4b3b3;
+  font-size: 1.5em;
+}
 .buttons label {
+  justify-content: center;
+  align-self: center;
   display: block;
   position: relative;
   width: 100px;
@@ -26,16 +37,13 @@ input[type="radio"] {
   margin: 20px;
   background-color: rgb(245, 11, 11);
   background-image: linear-gradient(to right, rgb(170, 0, 0) 0%, rgb(221, 52, 29) 20%, rgb(221, 62, 51) 80%, rgb(255, 96, 85) 100%);
-  box-shadow: 0 2px 10px rgba(0, 0, 31, 0.75);
+  box-shadow: 0 2px 10px #d2d2d8bf;
   cursor: pointer;
-  font-size: large;
 }
-
 .buttons label:hover {
   filter: brightness(1.125);
-  box-shadow: 0 2px 10px 2px rgba(63, 63, 127, 0.75);
+  box-shadow: 0 2px 10px 2px rgba(208, 208, 221, 0.75);
 }
-
 .buttons label:after {
   content: "";
   position: absolute;
@@ -44,20 +52,18 @@ input[type="radio"] {
   width: inherit;
   height: inherit;
   border-radius: inherit;
-  background-color: rgb(212, 29, 16);
-  transform: translateY(-20px);
+  background-color: #fc1504;
+  transform: translateY(-15px);
   transition-duration: 125ms;
   transition-delay: 125ms;
 }
-
 #i_1:checked ~ .buttons label:nth-child(1),
 #i_2:checked ~ .buttons label:nth-child(2),
 #i_3:checked ~ .buttons label:nth-child(3),
 #i_4:checked ~ .buttons label:nth-child(4),
 #i_5:checked ~ .buttons label:nth-child(5) {
-  box-shadow: 0 2px 1px 2px rgba(7, 95, 127, 0.75);
+  box-shadow: 0 2px 1px 2px rgba(236, 233, 227, 0.75);
 }
-
 #i_1:checked ~ .buttons label:nth-child(1):after,
 #i_2:checked ~ .buttons label:nth-child(2):after,
 #i_3:checked ~ .buttons label:nth-child(3):after,
@@ -84,20 +90,12 @@ input[type="radio"] {
 #i_5:checked ~ .buttons label:nth-child(5):active:after {
   transform: translateY(-1px);
 }
-/*
 .unchecker {
   position: fixed;
   display: block;
   width: 100%;
   height: 150vh;
 }
-*/
-
 #i_0:checked ~ .buttons > label:after {
   transition-delay: initial;
-}
-
-.keys {
-  background-color: white;
-  height:300px;
 }
